# holochain-open-dev---reusable-module-template

./: README.md  default.nix
.github/workflows/: main.yml
ui/: .hc  package-lock.json  package.json  rollup.config.js
ui/demo/: index.html
ui/src/: index.ts  types.ts
ui/src/elements/: calendar-event.ts  hod-calendar-event.ts
ui/test/mocks/: setupApolloClient.js
zome/: Cargo.toml  README.md
zome/tests/: package-lock.json  package.json
zome/tests/src/: index.ts
zome/workdir/dna/: dna.yaml  sample.dna
zome/workdir/happ/: sample-happ.happ
zome/zomes/todo_rename_zome/: Cargo.toml
zome/zomes/todo_rename_zome/src/: calendar_event.rs  lib.rs  utils.rs
