[workspace]
members = [
  "zomes/todo_rename_zome",
]

[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[patch.crates-io]
hc_utils = {git = "https://github.com/holochain/hc-utils", branch = "develop", package = "hc_utils"}
hdk3 = {git = "https://github.com/holochain/holochain", rev = "0744990", package = "hdk3"}
holo_hash = {git = "https://github.com/holochain/holochain", rev = "0744990", package = "holo_hash"}
